<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.eot_app.nav_menu.jobs.add_job.Add_job_activity">
    <!--android:layout_marginTop="12dp"-->


    <TextView
        android:id="@+id/wlcm_header"
        style="@style/header_text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/crate_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/extra_text" />

    <TextView
        android:id="@+id/wlcm_header_txt"
        style="@style/style_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wlcm_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="20dp"
        android:text="@string/crate_account_txt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text"
        android:textStyle="normal" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_btn"
        android:layout_below="@+id/wlcm_header_txt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/campany_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/company_name"
                    style="@style/style_sec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crate_account_com_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15dp"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"

                >

                <EditText
                    android:id="@+id/editText_email"
                    style="@style/style_sec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crate_account_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editText_password"
                    style="@style/style_sec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crate_account_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15dp"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/crate_account_server"


                >

                <EditText
                    android:id="@+id/editText_server"
                    style="@style/style_sec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableRight="@drawable/ic_drop_down_black"
                    android:focusable="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.eot_app.utility.util_interfaces.NoDefaultSpinner
                android:id="@+id/server_location_spinner"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/transparent"
                android:popupBackground="@drawable/popupbg"
                android:visibility="invisible" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_btn"
        style="@style/style_sec"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_field_height"
        android:layout_below="@+id/scrollView"
        android:layout_marginStart="@dimen/start_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/end_margin"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:singleLine="true"
        android:text="Register Now !"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />


</RelativeLayout>

