<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_invoice_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/invoive_pay_dialog_bck"
    app:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="20dp"
    card_view:contentPadding="25dp">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/full_amount"
            style="@style/style_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/pay_full_amount"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pay_amount_edt"
            style="@style/style_sec"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="#303A45"
            android:gravity="center"
            android:padding="10dp"
            android:text="RS 500000"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/partial_amount"
            style="@style/style_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_amount"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/pay_partial_amount"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pay_edt_partial"
            style="@style/style_sec"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pay_amount_edt"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/pay_edt_dialog"
            android:gravity="center"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:text=""
            android:textStyle="normal" />

        <Button
            android:id="@+id/pay_btn_inv"
            style="@style/style_sec"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_field_height"
            android:layout_below="@+id/pay_edt_partial"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/pay_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>


